--- a/hw6/style.css
+++ b/hw6/style.css
@@ -15,7 +15,7 @@ body {
     max-width: 1920 px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .logo_menu {
