--- a/hw6/style.css
+++ b/hw6/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: questrial, sans-serif;
+    font-family: roboto, sans-serif;
     font-weight: 400;
     font-size: 14px;
 }
@@ -16,10 +16,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    gap: 41px;
+
 }
 
 .logo_menu {
-    margin: 0 346px 0 14px;
+    margin: 0 346px 0 0px;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
@@ -103,7 +105,7 @@ body {
     display: block;
     box-sizing: border-box;
     border: none;
-    margin: 15px 36px 16px 35px;
+    margin: 15px 36px 16px 0px;
     width: 140px;
     height: 50px;
     margin-bottom: 119px;
@@ -118,7 +120,7 @@ body {
     display: block;
     box-sizing: border-box;
     border: none;
-    margin: 15px 36px 16px 35px;
+    margin: 15px 36px 16px 0;
    background-color: #F25822;
    border-radius: 50px;
    box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
