--- a/hw11/style.css
+++ b/hw11/style.css
@@ -4,19 +4,25 @@
     margin: 0;
     padding: 0;
 }
+a {
+    text-decoration: none;
+}
 
-/* .center {
-    padding-left: calc(50% - 637);
-    padding-right: calc(50% - 637);
-} */
+.center {
+    padding-left: calc(50% - 570px);
+    padding-right: calc(50% - 570px);
+}
 .header_menu {
     background-color: #222222;
-    padding: 18px 240px 19px 220px;
+    padding: 18px 0 19px 0;
 
 }
 .menu {
     display: flex;
     justify-content: space-between;
+    padding: 0 240px 0 231px;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 .search {
     display: flex;
@@ -32,20 +38,35 @@
 }
 .navigation{
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    gap: 33px;
 }
 /* _____________________ */
 .body {
     background: #F1E4E6;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 64px;
+    justify-content: center;
+    /* gap: 64px; */
     align-items: center;
-    padding: 0 322px 0 0;
+    /* padding: 0 322px 0 0; */
+    flex-wrap: nowrap;
+}
+.main_img {
+    width: 800px;
+    height: 764px;
+}
+.main_img img {
+    /* display: block;
+    width: 100%; */
+    height: 100%;
 }
 
 .main_text {
-    padding: 262px 302px 344px 77px;
+    padding: 262px 0 344px 0;
 
 }
 .div_text {
@@ -77,6 +98,39 @@
 }
 /* ___________________________ */
 
+.for_w {
+    /* width: 360px; */
+    height: 260px;
+}
+.for_w img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.for_m {
+    /* width: 360px; */
+    height: 260px;
+}
+.for_m img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.for_ch {
+    /* width: 360px; */
+    height: 260px;
+}
+.for_ch img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.for {
+    display: flex;
+    flex-direction: column;
+    /* align-content: center; */
+    align-items: center;
+}
 .triple {
     display: flex;
     flex-direction: row;
@@ -88,11 +142,15 @@
 }
 
 .accesories {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: center;
     padding-bottom: 96px;
+    /* width: 1140px; */
+    height: 180px;
+}
+
+.accesories img {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 /* __________________________________ */
 .featured {
@@ -193,7 +251,10 @@
 }
 /* ___________________________ */
 .button_down {
-padding-bottom: 60px;
+    padding-bottom: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 .button {
     color: #F26376;
@@ -205,4 +266,99 @@ padding-bottom: 60px;
     height: 48px;
     width: 212px;
     background-color: white;
+}
+/* ====================================================*/
+@media (max-width: 1024px) {
+    .center {
+        /* padding-left: calc(50% - 367px);
+        padding-right: calc(50% - 367px); */
+        max-width: 768px;
+    }
+
+    .header_menu {
+        /* background-color: #222222;
+        padding: 18px 0 19px 0; */
+        /* width: 1024px; */
+        
+    }
+    
+    .menu {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        padding: 0 30px 0 30px;
+
+    }
+    
+    .body {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
+
+    .main_img {
+        width: 386px;
+        height: 385px;
+    }
+    .mail_img img {
+        height: 100%;
+    }
+
+
+    .main_text {
+        padding: 138px 0 151px 0;
+    }
+    .brand {
+        font-size: 44px;
+    }
+    .color_text {
+        font-size: 24px
+    }
+    .fashion {
+        font-size: 24px
+    }
+    .triple {
+        /* max-width: 752,3px; */
+        display: flex;
+        flex-direction: row;
+        gap: 16px;
+        flex-wrap: nowrap;
+        justify-content: center;
+        padding-top: 65px;
+        padding-bottom: 16px;
+    }
+
+    .for_w {
+        width: 233px;
+        height: 167px;
+    }
+
+    .for_m {
+        width: 233px;
+        height: 167px;
+    }
+
+    .for_ch {
+        width: 233px;
+        height: 167px;
+    }
+
+    .accesories {
+        /* width: 734.6px; */
+        height: 116px;
+    }
+
+    .items {
+        grid-template-columns: repeat(2, 360px);
+        grid-template-rows: repeat(3, 581px);
+    }
+    .plitka {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        height: 1835px;
+    }
 }
