--- a/hw11/style.css
+++ b/hw11/style.css
@@ -73,7 +73,7 @@ a {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    /* width: 377px; */
+    width: 377px;
     height: 93px;
     color: #222;
     font-size: 20px;
@@ -443,5 +443,18 @@ a {
     }
     .p_item {
         padding-bottom: 65px;
+    }
+
+    .div_text {
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        /* width: 377px; */
+        height: 93px;
+        color: #222;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: normal;
     }
 }
