--- a/hw11/style.css
+++ b/hw11/style.css
@@ -5,7 +5,11 @@
     padding: 0;
 }
 a {
+    cursor: none;
+    color: none;
     text-decoration: none;
+    margin: 0;
+    padding: 0;
 }
 
 .center {
@@ -14,16 +18,17 @@ a {
 }
 .header_menu {
     background-color: #222222;
-    padding: 18px 0 19px 0;
+    /* padding: 18px 0 19px 0; */
 
 }
 .menu {
     display: flex;
     justify-content: space-between;
-    padding: 0 240px 0 231px;
+    padding: 0 230px;
     flex-direction: row;
     flex-wrap: nowrap;
 }
+
 .search {
     display: flex;
     gap: 41px;
@@ -49,11 +54,10 @@ a {
     background: #F1E4E6;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    /* gap: 64px; */
+    justify-content: flex-start;
     align-items: center;
-    /* padding: 0 322px 0 0; */
     flex-wrap: nowrap;
+    gap: 60px;
 }
 .main_img {
     width: 800px;
@@ -196,27 +200,38 @@ a {
 .item {
     height: 581px;
 }
+.img_div {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+  }
+   
+  .img_div:hover:after{
+    content:"";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 0 10000px rgba(86, 84, 84, 0.8);
+  }
 
 .img_div {
     height: 420px;
 }
+
+
 .img2_div {
-    padding: 9px 110.06px 11px 108px;
+    /* padding: 9px 110.06px 11px 108px; */
     background-color: #F7E4E2;
-    height: 400px;
+    /* height: 400px; */
 }
 
 .test {
     width: 360px;
     height:420px;
 }
-.a {
-    cursor: none;
-    color: none;
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-}
+
+
 .item_all_text {
     padding: 0 16px;
     background-color: #F8F8F8;
@@ -251,7 +266,8 @@ a {
 }
 /* ___________________________ */
 .button_down {
-    padding-bottom: 60px;
+    padding-bottom: 65px;
+    padding-top: 30px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -266,6 +282,198 @@ a {
     height: 48px;
     width: 212px;
     background-color: white;
+}
+/* _______________________________________ */
+.navigation2 {
+    background-color: #222224;
+    padding: 104px 230px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row;
+}
+.navigation_item {
+    width: 360px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    /* align-content: center; */
+    align-items: center;
+}
+.navigation_img {
+    padding-bottom: 28px;
+}
+.navigation_h3 {
+    color: #FBFBFB;
+    font-family: Lato;
+    font-size: 19.96px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-bottom: 16px;
+}
+.navigation_p {
+    color: #FBFBFB;
+    text-align: center;
+    font-family: Lato;
+    font-size: 13.972px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+/* ____________________________________ */
+.rectangle_img{
+    max-width: 1600px;
+    width: 100%;
+    min-height: 448px;
+    height: auto;
+    background-image: url(img/fon.png);
+    background-position: center;
+    /* background: rgba(0, 0, 0, 0.5); */
+    /* opacity: .4; */
+}
+.rectangle_content {
+    background-color: rgba(244, 244, 244, 0.70);
+    display: flex;
+    width: 100%;
+    height: 448px;
+    flex-direction: row;
+    /* gap: 327px; */
+    justify-content: space-evenly;
+    align-items: center;    
+}
+.woman {
+    display: flex;
+    width: 360px;
+    align-items: center;
+    flex-direction: column;
+}
+.woman_img {
+    padding-bottom: 20px;
+}
+.w_says {
+    width: 359.449px;
+    height: 99px;
+    flex-shrink: 0;
+    color: #222224;
+    text-align: center;
+    font-family: Lato;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.subscribe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+.subscribe_h1 {
+    color: #222224;
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 167.2%; /* 40.128px */
+}
+.subscribe_h2 {
+    color: #222224;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 167.2%;
+    padding-bottom: 32px;
+}
+.subscribe-block {
+    display: flex;
+    width: 356px;
+    height: 49px;
+    border-radius: 25px;
+    overflow: hidden;
+}
+
+
+.input_email {
+    width: 400px;
+
+}
+.input_e {
+    /* width: 322.59px;
+    height: 49px; */
+    flex-shrink: 0;
+    fill: #E1E1E1;
+   
+}
+.email {
+    width: 322px;
+    height: 49px;
+    border-radius: 40px;
+    border: none;
+    background: #E1E1E1;
+    padding: 0 0 0 22px;
+    position: absolute;
+}
+.subscribe_button {
+
+    width: 100px;
+    height: 49px;
+    background-image: url('img/Rounded\ Rectangle\ 5\ copy.svg');
+    border: none;
+    position: relative;
+    left: 300px;
+    color: #FFF;
+    text-align: center;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+/* ______________________________________ */
+.footer {
+    /* height: 79px; */
+    background: #222224;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.footer_content {
+    padding: 0 230px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer_t {
+    color: #FBFBFB;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.footer_links {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 8px;
+}
+.link_soc:hover {
+    background: #F16D7F;
+}
+.icon:hover path {
+    fill: white;
+    /* background:  #F16D7F; */
+}
+.link_soc {
+    background: white;
+    height: 32px;
+    width: 32px;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 /* ====================================================*/
 @media (max-width: 1024px) {
